# llm-models

./: .dockerignore  .gitignore  Dockerfile.chainlit  Dockerfile.qdrant  create_admin.py  docker-compose.yaml  gcp_deploy.sh  main.py  main_ingest.py  prometheus.yml  pyproject.toml  tatus
ingestion/: idcc_code_travail_ingestion.py
src/: utils.py
src/agents/: agent_conventions_collectives.py  ape_idcc_agent.py  base_agent.py  conventions_collectives_agent.py  droit_travail_agent.py  master_agent.py  master_agent_api.py  web_agent.py
src/api/: api_utils.py  database.py  main.py  models.py  schemas.py
src/api/alembic/: env.py
src/api/alembic/versions/: 971125daf951_init.py
src/api/endpoints/: auth_endpoint.py  llm_chat_endpoint.py
src/chainlit_app/: alembic.ini  auth.py  database.py  main.py  models.py  utils.py
src/chainlit_app/.chainlit/: config.toml
src/chainlit_app/alembic/: env.py
src/chainlit_app/alembic/versions/: 5cd943e27d08_change_confidence_to_string.py  a2fecd9184ac_remove_confidence_field.py
src/db/: connection.py
src/ingestion/: bocc_direct_pdf_ingestion.py  bocc_no_direct_pdf_ingestion.py  conventions_etendues_ingestion.py  idcc_code_travail_ingestion.py
