[project]
name = "2-llm-modelisation"
version = "0.1.0"
description = "Partie de modélisation LLM : configuration, personnalisation et intégration d’un modèle de langage large (LLM) afin de permettre l’analyse, l’indexation et le traitement avancé des documents collectés lors du scraping."
authors = ["Malek BOUMEDINE <malek.boumedine@gmail.com>"]
keywords = ["scraping", "data", "LLM", "RAG"]
licence = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "groq>=0.30.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.4",
    "langchain-qdrant>=0.2.0",
    "langchain-tavily>=0.2.8",
    "langgraph>=0.5.2",
    "networkx>=3.5",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pypdf>=5.7.0",
    "pypdf2>=3.0.1",
    "qdrant-client[fastembed]>=1.14.3",
    "sentence-transformers>=5.0.0",
    "tavily-python>=0.7.9",
    "xlrd>=2.0.2",
]
